// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar does render 1`] = `
<nav
  className="rka-sidebar"
>
  <ul
    className="rka-sidebar-nav"
  >
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Dashboard
      </a>
    </li>
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Images
      </a>
    </li>
    <li
      className="pos-r"
    >
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Stacks
      </a>
      <a
        className="rka-sidebar-link-icon"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className="rka-add-icon"
        >
          <use
            xlinkHref="add-icon.svg#add-icon"
          />
        </svg>
      </a>
      <div
        className="rka-sidebar-subnav"
      >
        <div
          className="rka-stacks-search-container"
        >
          <input
            className="rka-input-txt rka-stack-search"
            onChange={[Function]}
            placeholder="Search stack..."
            type="text"
          />
          <svg
            className="rka-stack-search-icon"
          >
            <use
              xlinkHref="search.svg#search-icon"
            />
          </svg>
        </div>
        <div
          className="rka-stacks-list is-loaded"
        >
          <div
            className="rka-stacks-load"
          />
        </div>
      </div>
    </li>
  </ul>
  <a
    className="rka-sidebar-poweredby"
    href="https://www.liip.ch/"
    target="_blank"
  >
    POWERED BY 
    <i
      className="rka-sidebar-liip-logo"
    />
  </a>
</nav>
`;

exports[`Sidebar does render when active 1`] = `
<nav
  className="rka-sidebar is-active"
>
  <ul
    className="rka-sidebar-nav"
  >
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Dashboard
      </a>
    </li>
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Images
      </a>
    </li>
    <li
      className="pos-r"
    >
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Stacks
      </a>
      <a
        className="rka-sidebar-link-icon"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className="rka-add-icon"
        >
          <use
            xlinkHref="add-icon.svg#add-icon"
          />
        </svg>
      </a>
      <div
        className="rka-sidebar-subnav"
      >
        <div
          className="rka-stacks-search-container"
        >
          <input
            className="rka-input-txt rka-stack-search"
            onChange={[Function]}
            placeholder="Search stack..."
            type="text"
          />
          <svg
            className="rka-stack-search-icon"
          >
            <use
              xlinkHref="search.svg#search-icon"
            />
          </svg>
        </div>
        <div
          className="rka-stacks-list is-loaded"
        >
          <div
            className="rka-stacks-load"
          />
        </div>
      </div>
    </li>
  </ul>
  <a
    className="rka-sidebar-poweredby"
    href="https://www.liip.ch/"
    target="_blank"
  >
    POWERED BY 
    <i
      className="rka-sidebar-liip-logo"
    />
  </a>
</nav>
`;

exports[`Sidebar shows load more button 1`] = `
<nav
  className="rka-sidebar is-active"
>
  <ul
    className="rka-sidebar-nav"
  >
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Dashboard
      </a>
    </li>
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Images
      </a>
    </li>
    <li
      className="pos-r"
    >
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Stacks
      </a>
      <a
        className="rka-sidebar-link-icon"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className="rka-add-icon"
        >
          <use
            xlinkHref="add-icon.svg#add-icon"
          />
        </svg>
      </a>
      <div
        className="rka-sidebar-subnav is-active"
      >
        <div
          className="rka-stacks-search-container"
        >
          <input
            className="rka-input-txt rka-stack-search"
            onChange={[Function]}
            placeholder="Search stack..."
            type="text"
          />
          <svg
            className="rka-stack-search-icon"
          >
            <use
              xlinkHref="search.svg#search-icon"
            />
          </svg>
        </div>
        <div
          className="rka-stacks-list"
        >
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-a
          </a>
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-b
          </a>
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-c
          </a>
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-d
          </a>
          <div
            className="rka-stacks-load"
          >
            <button
              className="rka-button rka-button-brand rka-button-fullwidth"
              onClick={[Function]}
            >
              Load more
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
  <a
    className="rka-sidebar-poweredby"
    href="https://www.liip.ch/"
    target="_blank"
  >
    POWERED BY 
    <i
      className="rka-sidebar-liip-logo"
    />
  </a>
</nav>
`;

exports[`Sidebar shows stacks 1`] = `
<nav
  className="rka-sidebar is-active"
>
  <ul
    className="rka-sidebar-nav"
  >
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Dashboard
      </a>
    </li>
    <li>
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Images
      </a>
    </li>
    <li
      className="pos-r"
    >
      <a
        className="rka-sidebar-link"
        onClick={[Function]}
        style={Object {}}
      >
        Stacks
      </a>
      <a
        className="rka-sidebar-link-icon"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className="rka-add-icon"
        >
          <use
            xlinkHref="add-icon.svg#add-icon"
          />
        </svg>
      </a>
      <div
        className="rka-sidebar-subnav is-active"
      >
        <div
          className="rka-stacks-search-container"
        >
          <input
            className="rka-input-txt rka-stack-search"
            onChange={[Function]}
            placeholder="Search stack..."
            type="text"
          />
          <svg
            className="rka-stack-search-icon"
          >
            <use
              xlinkHref="search.svg#search-icon"
            />
          </svg>
        </div>
        <div
          className="rka-stacks-list is-loaded"
        >
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-a
          </a>
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-b
          </a>
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-c
          </a>
          <a
            className="rka-sidebar-sublink txt-ellipsis"
            onClick={[Function]}
            style={Object {}}
          >
            stack-d
          </a>
          <div
            className="rka-stacks-load"
          />
        </div>
      </div>
    </li>
  </ul>
  <a
    className="rka-sidebar-poweredby"
    href="https://www.liip.ch/"
    target="_blank"
  >
    POWERED BY 
    <i
      className="rka-sidebar-liip-logo"
    />
  </a>
</nav>
`;
